fix: [#913] contrast issues across links

--- a/web/styles/landing.scss
+++ b/web/styles/landing.scss
@@ -307,7 +307,7 @@
 }
 
 .card-container-nj-style {
-  border-top: 0.5rem solid #538200 !important;
+  border-top: 0.5rem solid $primary !important;
   border-left: none !important;
   border-bottom: none !important;
   border-right: none !important;
