--- a/web/styles/left-nav.scss
+++ b/web/styles/left-nav.scss
@@ -105,7 +105,7 @@
     flex: 0 1 auto;
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-    background-color: #538200;
+    background-color: $primary;
     color: #fff;
     font-size: 0.81rem;
     height: 3rem;
